<resources>
    <string name="app_name">Alarm-Clock</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Настройки</string>
    <string name="account_denied">Доступ запрещён</string>


    <string name="app_pref_file">application_preferences</string>
    <string name="app_is_guest">#IS_GUEST_USER#</string>

    <string name="title_activity_alarm_list">Будильники</string>

    <string name="title_activity_rise_and_shine_mr_freeman">С добрым утром!</string>
    <string name="title_activity_alarm_settings">Настройки будильников</string>

    <string-array name="ringers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>


    <!-- Строчки экрана создания будильника -->

    <string name="title_general_settings">Общие настройки</string>
    <string name="title_add_name_alarm_clock">Название будильника</string>
    <string name="title_add_time_alarm_clock">Время будильника</string>
    <string name="title_add_day_alarm_clock">Дни недели</string>

    <string name="title_activity_login">Вход</string>

    <string name="title_signal_settings">Настройки сигнала</string>
    <string name="title_add_signal_alarm_clock">Сигнал</string>
    <string name="title_add_vibration_alarm_clock">Вибрация</string>
    <string name="title_switch_off">Выключена</string>
    <string name="title_switch_on">Включена</string>
    <string name="title_disable_settings">Настройки отключения</string>
    <string name="title_add_count_img_alarm_clock">Фотографий всего </string>
    <string name="title_add_count_friends_img_alarm_clock">Фотогафий друзей</string>


    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="login_via_instagram">Login via Instagram</string>
    <string name="login_as_guest">Login as guest</string>


</resources>
